datachannel_args = [
    '-DRTC_STATIC',
]
datachannel_lib = static_library(
    'datachannel',
    [
        'candidate.cpp',
        'channel.cpp',
        'configuration.cpp',
        'datachannel.cpp',
        'description.cpp',
        'global.cpp',
        'message.cpp',
        'peerconnection.cpp',
        'rtcpreceivingsession.cpp',
        'track.cpp',
        'websocket.cpp',
        'websocketserver.cpp',
        'rtppacketizationconfig.cpp',
        'rtcpsrreporter.cpp',
        'rtppacketizer.cpp',
        'opusrtppacketizer.cpp',
        'opuspacketizationhandler.cpp',
        'h264rtppacketizer.cpp',
        'nalunit.cpp',
        'h264packetizationhandler.cpp',
        'av1rtppacketizer.cpp',
        'av1packetizationhandler.cpp',
        'mediachainablehandler.cpp',
        'mediahandlerelement.cpp',
        'mediahandlerrootelement.cpp',
        'rtcpnackresponder.cpp',
        'rtp.cpp',
        'capi.cpp',
        'impl/certificate.cpp',
        'impl/channel.cpp',
        'impl/datachannel.cpp',
        'impl/dtlssrtptransport.cpp',
        'impl/dtlstransport.cpp',
        'impl/icetransport.cpp',
        'impl/init.cpp',
        'impl/peerconnection.cpp',
        'impl/logcounter.cpp',
        'impl/sctptransport.cpp',
        'impl/threadpool.cpp',
        'impl/tls.cpp',
        'impl/track.cpp',
        'impl/utils.cpp',
        'impl/processor.cpp',
        'impl/sha.cpp',
        'impl/pollinterrupter.cpp',
        'impl/pollservice.cpp',
        'impl/http.cpp',
        'impl/httpproxytransport.cpp',
        'impl/tcpserver.cpp',
        'impl/tcptransport.cpp',
        'impl/tlstransport.cpp',
        'impl/transport.cpp',
        'impl/verifiedtlstransport.cpp',
        'impl/websocket.cpp',
        'impl/websocketserver.cpp',
        'impl/wstransport.cpp',
        'impl/wshandshake.cpp',
    ],
    include_directories: [
        datachannel_inc,
        include_directories('.', '../include/rtc'),
    ],
    dependencies: [
        dependency('plog'),
        dependency('juice', default_options: ['default_library=static']),
        dependency(
            'usrsctp',
            default_options: [
                'default_library=static',
                'sctp_build_programs=false',
            ],
        ),
        dependency('libsrtp2', default_options: ['default_library=static']),
        dependency('openssl', default_options: ['default_library=static']),
    ],
    cpp_args: [
        datachannel_args,
        '-DRTC_EXPORTS',
        '-DNOMINMAX',
    ],
)

